--- a/peta.html
+++ b/peta.html
@@ -24,42 +24,55 @@
     select::-ms-expand{display:none}
     #map{width:100%;height:85vh;border-radius:12px;background:#0b1220;box-shadow:0 10px 30px rgba(0,0,0,0.6);margin-top:14px;display:block}
     .status{margin-top:8px;color:var(--muted);font-size:13px}
-    /* pastikan internal svg/img tidak tampil, kita gunakan teks X */
- 
 
-    /* Legend as grid: 4 columns on wide screens, auto-wrap */
+    /* Legend grid */
     .legend{
       display:grid;
       grid-template-columns: repeat(4, minmax(0,1fr));
       gap:12px;
-      align-items:center;
-      justify-content:center;
       margin-top:12px;
       padding:12px;
       background:rgba(0,0,0,0.45);
       border-radius:10px;
       box-shadow:0 6px 18px rgba(0,0,0,0.45);
       z-index:9999;
-      position:relative;
       max-width:1200px;
       margin-left:auto;
       margin-right:auto;
+      grid-auto-rows: 64px;
+      align-items:center;
     }
-    .legend-item{display:flex;align-items:center;gap:10px;padding:10px 14px;background:rgba(255,255,255,0.03);border-radius:10px;font-size:14px;color:#e6eef7;min-width:220px}
+    .legend-item{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      padding:10px 14px;
+      background:rgba(255,255,255,0.03);
+      border-radius:10px;
+      font-size:14px;
+      color:#e6eef7;
+      min-width:220px;
+      min-height:56px;
+      box-sizing:border-box;
+    }
     .legend-item img{width:28px;height:28px;object-fit:contain;filter:drop-shadow(0 3px 6px rgba(0,0,0,0.4))}
+    .legend-item span{display:block;text-align:left;line-height:1.2;white-space:normal;word-break:break-word}
 
-    /* Responsive legend: on small screens, 2 columns */
     @media(max-width:900px){
-      .legend{grid-template-columns: repeat(2, minmax(0,1fr));}
+      .legend{grid-template-columns: repeat(2, minmax(0,1fr)); grid-auto-rows:auto}
       #map{height:65vh}
       .controls{flex-direction:column;align-items:flex-start}
       .footer-inner{gap:20px;justify-content:center}
     }
 
-    .custom-iw{font-size:13px;color:#021129;background:#fff;padding:12px;border-radius:8px;max-width:320px;text-align:left;line-height:1.4;box-shadow:0 8px 24px rgba(2,6,23,0.35)}
+    .custom-iw{font-size:13px;color:#021129;background:#fff;padding:14px;border-radius:8px;max-width:320px;text-align:left;line-height:1.4;box-shadow:0 8px 24px rgba(2,6,23,0.35);position:relative}
     .custom-iw>div{margin:0;padding:0}
+    .custom-iw .iw-close{position:absolute;top:8px;right:8px;width:28px;height:28px;border-radius:6px;border:none;background:#fff;box-shadow:0 6px 14px rgba(2,6,23,0.35);cursor:pointer;font-size:14px;line-height:1;color:#333}
 
-    /* Footer layout */
+    /* hide Google Maps default close controls */
+    .gm-style .gm-ui-hover-effect { display:none !important; }
+
+    /* Footer */
     .site-footer{background:#050505;color:#d1d5db;padding:24px 20px;margin-top:20px;border-radius:8px;text-align:left}
     .footer-inner{max-width:1200px;margin:0 auto;display:flex;gap:40px;justify-content:space-between;align-items:flex-start;flex-wrap:wrap}
     .footer-brand .logo{font-weight:700}
@@ -71,16 +84,6 @@
 
     .goto-top{position:fixed;right:20px;bottom:28px;width:44px;height:44px;border-radius:22px;background:#111;color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,0.4)}
     .goto-top span{font-size:18px}
-
-    /* Tame InfoWindow close button: hide internal image/svg then show single styled X */
-    .gm-style .gm-style-iw { padding:0 !important; margin:0 !important; max-width:320px !important; }
-    .gm-style .gm-ui-hover-effect { background:#fff !important; width:28px !important; height:28px !important; border-radius:6px !important; box-shadow:0 6px 14px rgba(2,6,23,0.35) !important; display:flex !important; align-items:center !important; justify-content:center !important; }
-    .gm-style .gm-ui-hover-effect img, .gm-style .gm-ui-hover-effect svg { display:none !important; }
-    .gm-style .gm-ui-hover-effect::after{ content: "✕"; font-size:14px; color:#333; line-height:1; }
-   .gm-style .gm-ui-hover-effect img, .gm-style .gm-ui-hover-effect svg { display:none !important; }
-
-    /* small visual polish for InfoWindow content */
-    .gm-style .gm-style-iw > div { padding:0 !important; }
   </style>
 </head>
 <body>
@@ -244,7 +247,6 @@
       if(/^(berfungsi|baik|operasional)$/.test(s)) out.Status_Keberfungsian = 'Berfungsi';
       else if(/^(belum\s*berfungsi|belum|perencanaan|rencana|planned|prepared)$/.test(s)) out.Status_Keberfungsian = 'Belum Berfungsi';
       else if(/(tidak\s*berfungsi|tidakberfungsi|tidak\s*berfungi|tidak\s*diketahui|rusak|mati|off|non[\-\s]?operasional)/.test(s)) out.Status_Keberfungsian = 'Tidak Berfungsi';
-      else if(/(tidak\s*diketahui|unknown)/.test(s)) out.Status_Keberfungsian = 'Tidak Diketahui';
       else out.Status_Keberfungsian = raw || '';
       return out;
     }
@@ -277,7 +279,7 @@
       const realAng = realAngRaw ? formatCurrency(realAngRaw) : '';
       const thOptimal = (thOptimalRaw && thOptimalRaw !== '-') ? thOptimalRaw : '';
 
-      let html = '<div class="custom-iw">';
+      let html = '<div class="custom-iw"><button class="iw-close" aria-label="Tutup">✕</button>';
       if(nama) html += '<div><strong>'+escapeHtml(nama)+'</strong></div>';
       if(sektor) html += '<div>Sektor: '+escapeHtml(sektor)+'</div>';
       if(jenis) html += '<div>Jenis Kegiatan: '+escapeHtml(jenis)+'</div>';
@@ -289,6 +291,16 @@
       if(thOptimal) html += '<div>Tahun Optimalisasi: '+escapeHtml(thOptimal)+'</div>';
       html += '</div>';
       return html;
+    }
+
+    function attachIWClose(){
+      setTimeout(()=>{
+        const btn = document.querySelector('.gm-style .custom-iw .iw-close');
+        if(!btn) return;
+        const nb = btn.cloneNode(true);
+        btn.parentNode.replaceChild(nb, btn);
+        nb.addEventListener('click', ()=>{ if(window.infoWindow) window.infoWindow.close(); });
+      }, 80);
     }
 
     function clearMarkers(){ allMarkers.forEach(x=>x.marker.setMap(null)); allMarkers = []; }
@@ -330,11 +342,11 @@
           const currentZoom = map.getZoom();
           if(currentZoom < targetZoom){
             setTimeout(()=> map.setZoom(targetZoom), 250);
-            setTimeout(()=> { infoWindow.setContent(buildInfoHtml(props)); infoWindow.open(map, marker); }, 500);
+            setTimeout(()=> { infoWindow.setContent(buildInfoHtml(props)); infoWindow.open(map, marker); attachIWClose(); }, 500);
           } else {
-           infoWindow.setContent(buildInfoHtml(props));
-          infoWindow.open(map, marker);
-          fixInfoWindowClose();
+            infoWindow.setContent(buildInfoHtml(props));
+            infoWindow.open(map, marker);
+            attachIWClose();
           }
         });
 
@@ -366,29 +378,23 @@
       document.getElementById('regionFilter').innerHTML = '<option value="">Semua</option>' + Array.from(uniqueRegions).sort().map(r=>'<option>'+escapeHtml(r)+'</option>').join('');
       document.getElementById('jenisFilter').innerHTML = '<option value="">Semua</option>' + Array.from(uniqueJenis).sort().map(j=>'<option>'+escapeHtml(j)+'</option>').join('');
 
-    // ubah urutan/penambahan status jadi hanya dari data
-const ordered = ['Berfungsi','Belum Berfungsi','Tidak Berfungsi','Tidak Diketahui'];
-const statusSet = new Set(Array.from(uniqueStatus).map(s=>String(s||'').trim()).filter(Boolean));
-
-// tambahkan status standar hanya jika memang ada (case-insensitive)
-const lowerSet = new Set(Array.from(statusSet).map(s=>s.toLowerCase()));
-ordered.forEach(s=>{
-  if(lowerSet.has(s.toLowerCase())) statusSet.add(s);
-});
-
-// buat array terurut berdasarkan urutan prioritas jika tersedia
-const statusOptions = Array.from(statusSet).sort((a,b)=>{
-  const ia = ordered.indexOf(a), ib = ordered.indexOf(b);
-  if(ia !== -1 && ib !== -1) return ia - ib;
-  if(ia !== -1) return -1;
-  if(ib !== -1) return 1;
-  return a.localeCompare(b);
-});
-
-document.getElementById('statusFilter').innerHTML = '<option value="">Semua</option>' + statusOptions.map(s=>'<option>'+escapeHtml(s)+'</option>').join('');
+      const ordered = ['Berfungsi','Belum Berfungsi','Tidak Berfungsi','Tidak Diketahui'];
+      const statusSet = new Set(Array.from(uniqueStatus).map(s=>String(s||'').trim()).filter(Boolean));
+      const lowerSet = new Set(Array.from(statusSet).map(s=>s.toLowerCase()));
+      ordered.forEach(s=>{
+        if(lowerSet.has(s.toLowerCase())) statusSet.add(s);
+      });
+      const statusOptions = Array.from(statusSet).sort((a,b)=>{
+        const ia = ordered.indexOf(a), ib = ordered.indexOf(b);
+        if(ia !== -1 && ib !== -1) return ia - ib;
+        if(ia !== -1) return -1;
+        if(ib !== -1) return 1;
+        return a.localeCompare(b);
+      });
+      document.getElementById('statusFilter').innerHTML = '<option value="">Semua</option>' + statusOptions.map(s=>'<option>'+escapeHtml(s)+'</option>').join('');
     }
 
-    function applyFilter(){ /* tetap sama seperti sebelumnya */ 
+    function applyFilter(){
       const sector = document.getElementById('sectorFilter').value.trim();
       const year = document.getElementById('yearFilter').value.trim();
       const region = document.getElementById('regionFilter').value.trim();
@@ -480,49 +486,14 @@ document.getElementById('statusFilter').innerHTML = '<option value="">Semua</opt
       map.data.addListener('click', e => {
         const props = e.feature.getProperties();
         const name = props.NAMOBJ || props.WADMKK || props.NAME || props.NAMA || 'Wilayah';
-        const content = '<div class="custom-iw"><div><strong>' + escapeHtml(name) + '</strong></div></div>';
+        const content = '<div class="custom-iw"><button class="iw-close" aria-label="Tutup">✕</button><div><strong>' + escapeHtml(name) + '</strong></div></div>';
         infoWindow.setContent(content);
         infoWindow.setPosition(e.latLng);
         infoWindow.open(map);
-        fixInfoWindowClose();
+        attachIWClose();
       });
     }
 
-// Perbaikan tombol close InfoWindow: simpan satu tombol dan perhalus tampilannya
-function fixInfoWindowClose(){
-  // tunggu sedikit agar DOM ter-render
-  setTimeout(()=>{
-    const btns = Array.from(document.querySelectorAll('.gm-ui-hover-effect'));
-    if(!btns.length) return;
-    btns.forEach((b, i)=>{
-      if(i === 0){
-        // tampilkan satu tombol rapi
-        b.style.display = 'flex';
-        b.style.width = '28px';
-        b.style.height = '28px';
-        b.style.padding = '0';
-        b.style.borderRadius = '6px';
-        b.style.boxShadow = '0 6px 14px rgba(2,6,23,0.35)';
-        b.style.background = '#fff';
-        b.style.alignItems = 'center';
-        b.style.justifyContent = 'center';
-        b.style.cursor = 'pointer';
-        b.style.border = 'none';
-        // isi tombol jadi satu karakter X
-        b.textContent = '✕';
-        b.style.fontSize = '14px';
-        b.style.color = '#333';
-        // remove internal img/svg if any
-        const innerImg = b.querySelector('img, svg');
-        if(innerImg) innerImg.style.display = 'none';
-      } else {
-        // sembunyikan duplikat
-        b.style.display = 'none';
-      }
-    });
-  }, 120);
-}
-    
     async function initMap(){
       map = new google.maps.Map(document.getElementById('map'), { center:{lat:-3.3,lng:129.1}, zoom:7, mapTypeControl:false, streetViewControl:false });
       infoWindow = new google.maps.InfoWindow({ maxWidth:320, pixelOffset: new google.maps.Size(0, -25) });
