--- a/peta.html
+++ b/peta.html
@@ -10,9 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <style>
-    :root{--bg:#071024;--muted:#a7b6c8;--accent:#3b82f6}
+       :root{--bg:#071024;--muted:#a7b6c8;--accent:#3b82f6}
     html,body{height:100%;margin:0;font-family:"Poppins",system-ui,Segoe UI,Roboto,Arial;background:linear-gradient(180deg,var(--bg),#05060a);color:#fff}
-    .wrap{max-width:1400px;margin:20px auto;padding:20px;text-align:center}
+    .wrap{max-width:1400px;margin:20px auto;padding:20px;text-align:left}
     header{display:flex;justify-content:space-between;align-items:center;gap:12px;text-align:left}
     .title{font-weight:700;font-family:"Raleway",Poppins,system-ui,Segoe UI,Roboto,Arial}
     .btn{display:inline-block;padding:8px 14px;border-radius:8px;text-decoration:none;font-weight:700;cursor:pointer}
@@ -23,9 +23,9 @@
     .select-wrap::after{content:"";position:absolute;right:10px;top:50%;transform:translateY(-50%);width:0;height:0;border-left:6px solid transparent;border-right:6px solid transparent;border-top:8px solid #021129;pointer-events:none}
     select::-ms-expand{display:none}
     #map{width:100%;height:85vh;border-radius:12px;background:#0b1220;box-shadow:0 10px 30px rgba(0,0,0,0.6);margin-top:14px;display:block}
-    .status{margin-top:8px;color:var(--muted);font-size:13px}
+    .status{margin-top:8px;color:var(--muted);font-size:13px;text-align:left}
 
-    /* Legend grid and items */
+    /* Legend */
     .legend{
       display:grid;
       grid-template-columns: repeat(4, minmax(0,1fr));
@@ -35,11 +35,10 @@
       background:rgba(0,0,0,0.45);
       border-radius:10px;
       box-shadow:0 6px 18px rgba(0,0,0,0.45);
-      z-index:9999;
       max-width:1200px;
       margin-left:auto;
       margin-right:auto;
-      grid-auto-rows: 64px;
+      grid-auto-rows:64px;
       align-items:center;
     }
     .legend-item{
@@ -53,83 +52,67 @@
       color:#e6eef7;
       min-width:220px;
       min-height:56px;
-      box-sizing:border-box;
     }
     .legend-item img{width:28px;height:28px;object-fit:contain;filter:drop-shadow(0 3px 6px rgba(0,0,0,0.4))}
-    .legend-item span{display:block;text-align:left;line-height:1.2;white-space:normal;word-break:break-word}
+    .legend-item span{display:block;text-align:left;line-height:1.2;word-break:break-word}
 
     @media(max-width:900px){
       .legend{grid-template-columns: repeat(2, minmax(0,1fr)); grid-auto-rows:auto}
       #map{height:65vh}
       .controls{flex-direction:column;align-items:flex-start}
-      .footer-inner{gap:20px;justify-content:center}
     }
 
-    /* InfoWindow: keep single clean box. Use default Google close control but small and neat. */
-    .gm-style .gm-style-iw { background: transparent !important; box-shadow: none !important; padding: 0 !important; overflow: visible !important; }
+    /* ===== Popup Styling Fix ===== */
+    .gm-style .gm-style-iw { overflow: visible !important; }
     .gm-style .gm-style-iw > div { background: transparent !important; padding: 0 !important; overflow: visible !important; }
 
-    /* style Google Maps close control to be small, white, and non-intrusive */
-    .gm-ui-hover-effect {
-      display:flex !important;
-      width:26px !important;
-      height:26px !important;
-      top:8px !important;
-      right:8px !important;
-      border-radius:6px !important;
-      background:#fff !important;
-      border:1px solid rgba(0,0,0,0.08) !important;
-      box-shadow:0 4px 10px rgba(2,6,23,0.08) !important;
-      align-items:center !important;
-      justify-content:center !important;
-      z-index:9999 !important;
+    /* Popup Content Box */
+    .custom-iw {
+      font-size:13px;
+      color:#021129;
+      background:#fff;
+      padding:12px 44px 12px 14px; /* ruang kanan untuk tombol */
+      border-radius:8px;
+      max-width:320px;
+      text-align:left;
+      line-height:1.4;
+      box-shadow:0 8px 20px rgba(2,6,23,0.08);
+      border:1px solid rgba(0,0,0,0.06);
+      position:relative;
+      overflow:visible;
+      word-break:break-word;
     }
 
-    /* Reposisi tombol close agar tetap di dalam popup tapi tidak menutupi teks */
-.gm-style-iw-t::after {
-  display: none !important;
-}
-
-.gm-ui-hover-effect {
-  position: absolute !important;
-  top: 6px !important;
-  right: 6px !important;
-  transform: none !important;
-  background: #fff !important;
-  border-radius: 4px !important;
-  border: 1px solid rgba(0,0,0,0.1) !important;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1) !important;
-  width: 20px !important;
-  height: 20px !important;
-  z-index: 100 !important;
-}
-
-.gm-ui-hover-effect img,
-.gm-ui-hover-effect svg {
-  width: 10px !important;
-  height: 10px !important;
-  margin: auto !important;
-}
-
-.custom-iw {
-  position: relative;
-  padding-top: 28px; /* beri ruang agar tombol tidak menutupi teks */
-}
-    .custom-iw>div{margin:0;padding:0}
-
-    /* ensure Google wrapper doesn't force scroll */
-    .gm-style-iw-d, .gm-style-iw-c, .gm-style-iw-t { max-height:none !important; overflow:visible !important; }
+    /* Tombol Close di Dalam Popup */
+    .gm-style .gm-style-iw .gm-ui-hover-effect {
+      position: absolute !important;
+      top: 8px !important;
+      right: 8px !important;
+      width: 24px !important;
+      height: 24px !important;
+      border-radius:6px !important;
+      background:#fff !important;
+      border:1px solid rgba(0,0,0,0.1) !important;
+      box-shadow:0 4px 10px rgba(2,6,23,0.08) !important;
+      z-index:99999 !important;
+      display:flex !important;
+      align-items:center !important;
+      justify-content:center !important;
+    }
+    .gm-style .gm-style-iw .gm-ui-hover-effect img,
+    .gm-style .gm-style-iw .gm-ui-hover-effect svg {
+      width:12px !important;
+      height:12px !important;
+      margin:0 !important;
+      transform:none !important;
+    }
 
     /* Footer */
     .site-footer{background:#050505;color:#d1d5db;padding:24px 20px;margin-top:20px;border-radius:8px;text-align:left}
     .footer-inner{max-width:1200px;margin:0 auto;display:flex;gap:40px;justify-content:space-between;align-items:flex-start;flex-wrap:wrap}
-    .footer-brand .logo{font-weight:700}
     .footer-col h4{margin:0 0 8px 0;color:#fff}
     .footer-note{margin-top:8px;color:#9ca3af;font-size:13px}
-    .footer-links{list-style:none;padding:0;margin:0}
-    .footer-links li{margin:6px 0}
     .footer-bottom{margin-top:16px;border-top:1px solid rgba(255,255,255,0.03);padding-top:12px;text-align:center;color:#9ca3af;font-size:13px}
-
     .goto-top{position:fixed;right:20px;bottom:28px;width:44px;height:44px;border-radius:22px;background:#111;color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,0.4)}
     .goto-top span{font-size:18px}
   </style>
