--- a/peta.html
+++ b/peta.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <style>
-       :root{--bg:#071024;--muted:#a7b6c8;--accent:#3b82f6}
+    :root{--bg:#071024;--muted:#a7b6c8;--accent:#3b82f6}
     html,body{height:100%;margin:0;font-family:"Poppins",system-ui,Segoe UI,Roboto,Arial;background:linear-gradient(180deg,var(--bg),#05060a);color:#fff}
     .wrap{max-width:1400px;margin:20px auto;padding:20px;text-align:left}
     header{display:flex;justify-content:space-between;align-items:center;gap:12px;text-align:left}
@@ -61,51 +61,69 @@
       #map{height:65vh}
       .controls{flex-direction:column;align-items:flex-start}
     }
+    
+/* ===== Popup Styling Final ===== */
+.gm-style .gm-style-iw {
+  overflow: visible !important;
+}
 
-    /* ===== Popup Styling Fix ===== */
-    .gm-style .gm-style-iw { overflow: visible !important; }
-    .gm-style .gm-style-iw > div { background: transparent !important; padding: 0 !important; overflow: visible !important; }
+.gm-style .gm-style-iw > div {
+  background: transparent !important;
+  padding: 0 !important;
+  overflow: visible !important;
+}
 
-    /* Popup Content Box */
-    .custom-iw {
-      font-size:13px;
-      color:#021129;
-      background:#fff;
-      padding:12px 44px 12px 14px; /* ruang kanan untuk tombol */
-      border-radius:8px;
-      max-width:320px;
-      text-align:left;
-      line-height:1.4;
-      box-shadow:0 8px 20px rgba(2,6,23,0.08);
-      border:1px solid rgba(0,0,0,0.06);
-      position:relative;
-      overflow:visible;
-      word-break:break-word;
-    }
+/* Kotak popup bersih tanpa border frame */
+.custom-iw {
+  font-size: 13px;
+  color: #021129;
+  background: #ffffff;
+  padding: 12px 46px 12px 14px;
+  border-radius: 10px;
+  max-width: 320px;
+  text-align: left;
+  line-height: 1.5;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
+  position: relative;
+  overflow: visible;
+  word-break: break-word;
+  border: none; /* hilangkan frame tipis */
+}
 
-    /* Tombol Close di Dalam Popup */
-    .gm-style .gm-style-iw .gm-ui-hover-effect {
-      position: absolute !important;
-      top: 8px !important;
-      right: 8px !important;
-      width: 24px !important;
-      height: 24px !important;
-      border-radius:6px !important;
-      background:#fff !important;
-      border:1px solid rgba(0,0,0,0.1) !important;
-      box-shadow:0 4px 10px rgba(2,6,23,0.08) !important;
-      z-index:99999 !important;
-      display:flex !important;
-      align-items:center !important;
-      justify-content:center !important;
-    }
-    .gm-style .gm-style-iw .gm-ui-hover-effect img,
-    .gm-style .gm-style-iw .gm-ui-hover-effect svg {
-      width:12px !important;
-      height:12px !important;
-      margin:0 !important;
-      transform:none !important;
-    }
+/* Tombol close: warna kontras, tetap di dalam popup */
+.gm-style .gm-style-iw .gm-ui-hover-effect {
+  position: absolute !important;
+  top: 8px !important;
+  right: 8px !important;
+  width: 24px !important;
+  height: 24px !important;
+  border-radius: 6px !important;
+  background: #e5f0ff !important; /* biru muda biar beda dari latar */
+  border: 1px solid #3b82f6 !important; /* outline biru */
+  box-shadow: 0 2px 8px rgba(59, 130, 246, 0.25) !important;
+  z-index: 99999 !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  transition: all 0.2s ease-in-out;
+}
+
+.gm-style .gm-style-iw .gm-ui-hover-effect:hover {
+  background: #3b82f6 !important;
+}
+
+.gm-style .gm-style-iw .gm-ui-hover-effect img,
+.gm-style .gm-style-iw .gm-ui-hover-effect svg {
+  width: 12px !important;
+  height: 12px !important;
+  margin: 0 !important;
+  filter: invert(0) !important;
+}
+
+.gm-style .gm-style-iw .gm-ui-hover-effect:hover img,
+.gm-style .gm-style-iw .gm-ui-hover-effect:hover svg {
+  filter: invert(1) !important; /* warna ikon jadi putih saat hover */
+}
 
     /* Footer */
     .site-footer{background:#050505;color:#d1d5db;padding:24px 20px;margin-top:20px;border-radius:8px;text-align:left}
