--- a/peta.html
+++ b/peta.html
@@ -77,60 +77,56 @@
   overflow: visible !important;
 }
 
-/* Tambahan styling untuk label dan nilai */
-.custom-iw .iw-label {
-  font-weight: 500;
-  color: #4b5563;
+/* Responsive popup: lebar mengikuti isi, beri ruang kanan untuk tombol X */
+.custom-iw {
+  display: inline-block;        /* konten menentukan lebar */
+  width: auto !important;
+  max-width: 380px;             /* batas lebar agar tidak terlalu lebar */
+  box-sizing: border-box;
+  padding: 12px 56px 12px 14px; /* ruang kanan untuk tombol X (56px) */
+  background: #ffffff;
+  color: #202124;
+  border-radius: 10px;
+  text-align: left;
+  line-height: 1.4;
+  word-break: break-word;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.12);
 }
 
-.custom-iw .iw-value {
-  font-weight: 700;
-  color: #021129;
+/* Pastikan wrapper InfoWindow tidak memotong konten */
+.gm-style .gm-style-iw-c,
+.gm-style .gm-style-iw-d {
+  overflow: visible !important;
 }
 
-.custom-iw .iw-title {
-  font-size: 14px;
-  font-weight: 700;
-  color: #021129;
-  margin-bottom: 6px;
-  display: block;
-}
-
-
-/* ganti ikon bawaan dengan X */
-.gm-style .gm-ui-hover-effect img,
-.gm-style .gm-ui-hover-effect svg {
-  display: none !important;
-}
-
+/* Tombol X berada di layer terpisah dan tidak menutupi isi */
 .gm-style .gm-ui-hover-effect {
   position: absolute !important;
-  top: 6px !important;
-  right: 6px !important;
-  width: 28px !important;
-  height: 28px !important;
-  border-radius: 6px !important;
-  background: #f2f2f2 !important;
+  top: 8px !important;
+  right: 8px !important;
+  width: 36px !important;
+  height: 36px !important;
+  border-radius: 8px !important;
+  background: rgba(0,0,0,0.06) !important;
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.12) !important;
-  cursor: pointer !important;
   z-index: 99999 !important;
+  pointer-events: auto !important;
 }
 
-/* tampilkan tanda X */
+/* Pakai X tekstual agar konsisten di semua browser */
+.gm-style .gm-ui-hover-effect img,
+.gm-style .gm-ui-hover-effect svg { display: none !important; }
 .gm-style .gm-ui-hover-effect::before {
   content: "✕";
-  font-size: 14px;
-  color: #333;
+  font-size: 16px;
+  color: #222;
   font-weight: 600;
   line-height: 1;
-  display: block;
 }
-.gm-style .gm-ui-hover-effect:hover::before {
-  color: #000;
-}
+.gm-style .gm-ui-hover-effect:hover::before { color: #000; }
+
 
     /* Footer */
     .site-footer{background:#050505;color:#d1d5db;padding:24px 20px;margin-top:20px;border-radius:8px;text-align:left}
