--- a/peta.html
+++ b/peta.html
@@ -77,55 +77,70 @@
   overflow: visible !important;
 }
 
-/* Responsive popup: lebar mengikuti isi, beri ruang kanan untuk tombol X */
+/* Popup flat putih polos tanpa shadow */
 .custom-iw {
-  display: inline-block;        /* konten menentukan lebar */
+  display: inline-block;
   width: auto !important;
-  max-width: 380px;             /* batas lebar agar tidak terlalu lebar */
+  max-width: 380px;
   box-sizing: border-box;
-  padding: 12px 56px 12px 14px; /* ruang kanan untuk tombol X (56px) */
+  padding: 12px 48px 12px 14px; /* ruang kanan untuk tombol X */
   background: #ffffff;
   color: #202124;
-  border-radius: 10px;
+  border-radius: 8px;
   text-align: left;
-  line-height: 1.4;
+  line-height: 1.5;
   word-break: break-word;
-  box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+  border: 1px solid rgba(0,0,0,0.08); /* garis tipis halus */
+  box-shadow: none !important; /* HILANGKAN shadow */
 }
 
-/* Pastikan wrapper InfoWindow tidak memotong konten */
+/* pastikan Google wrapper tidak potong popup */
 .gm-style .gm-style-iw-c,
 .gm-style .gm-style-iw-d {
   overflow: visible !important;
+  background: transparent !important;
+  box-shadow: none !important;
 }
 
-/* Tombol X berada di layer terpisah dan tidak menutupi isi */
+/* Tombol close flat di dalam popup */
 .gm-style .gm-ui-hover-effect {
   position: absolute !important;
-  top: 8px !important;
-  right: 8px !important;
-  width: 36px !important;
-  height: 36px !important;
-  border-radius: 8px !important;
-  background: rgba(0,0,0,0.06) !important;
+  top: 6px !important;
+  right: 6px !important;
+  width: 28px !important;
+  height: 28px !important;
+  border-radius: 4px !important;
+  background: #f5f5f5 !important; /* abu terang */
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
+  cursor: pointer !important;
   z-index: 99999 !important;
-  pointer-events: auto !important;
+  border: 1px solid rgba(0,0,0,0.1) !important;
+  box-shadow: none !important; /* flat tanpa shadow */
 }
 
-/* Pakai X tekstual agar konsisten di semua browser */
+/* Hilangkan ikon bawaan Google */
 .gm-style .gm-ui-hover-effect img,
-.gm-style .gm-ui-hover-effect svg { display: none !important; }
+.gm-style .gm-ui-hover-effect svg {
+  display: none !important;
+}
+
+/* Gunakan huruf X yang simpel */
 .gm-style .gm-ui-hover-effect::before {
-  content: "✕";
+  content: "×";
   font-size: 16px;
-  color: #222;
   font-weight: 600;
+  color: #333;
   line-height: 1;
 }
-.gm-style .gm-ui-hover-effect:hover::before { color: #000; }
+
+.gm-style .gm-ui-hover-effect:hover {
+  background: #e8e8e8 !important;
+}
+.gm-style .gm-ui-hover-effect:hover::before {
+  color: #000;
+}
 
 
     /* Footer */
